TODO
 - Add a visual resize option to item
 - Add Grid Wirzard
 - Make toolbox global if required, so only one exits by screen
 - Label is not selected after alter
 - Add warning when adding second item to root
 - JSON Path should always be relative, directory protection
 - Enable reorder from code tree
 - Drop element when not allowed, element is removed
 - Drop element in tabpanel throws error this.el , notifyover
 - See if it is possible to ignore xtype error when type does not exists
 - Add option to use window as designer container, handy for form design
 - Update documentation
 - Problem to that designer json is load in window and not in designer
 
 Change History:
 Version 2.1.0:
  + Added a new json parser therefor begin and end tags are no longer needed in code
  + Found a good solotion for property grid error
 
 Version 2.0.6:
  + Added PHPFile control thanks to Epsylon
  + index.php is added again to release, wraps index.html
  * Fixed problem with null values in json causing error message (layout wizards)
  * Fixed undo problem, changes made with grid could not be undone
  * Cleaned duplicated values from the propertyselection list
  * Drag element, pressing shift changes to clone mode
  * JsonInit is removed from redraw to increase performance
  * Made code override for Ext.FormPanel so it does not crash on a empty item list
  - Moved ExtJs to seperate folder, so you can choose your version of extjs
  - Cleaned old code from subversion
  + Workarround for error in property grid throwing error variable k

 Version 2.0.5:
  * Fixed problem in CodePress and Designer with path
  * Fixed load indicator in JsonPanel
  * Delete of item with single element failed
  * Fixed problem with required_js and required_css
  
 Version 2.0.4:
  + Loading indicator
  + Documentation window added under Question Mark
  + Added loadConfig method for loading from URL
  + Added autoLoad option in config to load json from URL
  + Added Cookie files