@@ -86,7 +86,7 @@ Ext.BLANK_IMAGE_URL="extjs/resources/images/default/s.gif";
                 border:false,
                 bodyBorder:false,
                 bodyStyle:'background:black;border:dashed green 1px;',
-                layout:'fit',
+        //        layout:'fit',
                 xtype :'jsonpanel',
 				 plugins : [
 					new Ext.ux.plugin.Designer({
