@@ -1,5 +1,4 @@
 TODO
- - Add a visual resize option to item
  - Add Grid Wirzard
  - Make toolbox global if required, so only one exits by screen
  - Label is not selected after alter
@@ -11,12 +10,14 @@ TODO
  - See if it is possible to ignore xtype error when type does not exists
  - Add option to use window as designer container, handy for form design
  - Update documentation
- - Problem to that designer json is load in window and not in designer
  
  Change History:
  Version 2.1.0:
   + Added a new json parser therefor begin and end tags are no longer needed in code
+  + Visual resize added for active element
   + Found a good solotion for property grid error
+  + Split single files containing multiple classes into files
+  + Added "scope.!<VAR>" in json object, so you can create local objects if they don't exist
  
  Version 2.0.6:
   + Added PHPFile control thanks to Epsylon
